# df-storyteller

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  quest_idea.md
.github/workflows/: publish.yml
dfhack_scripts/: storyteller-begin.lua  storyteller-debug-appearance.lua  storyteller-debug-bpmod.lua  storyteller-debug-child-tissue.lua  storyteller-debug-colors.lua  storyteller-debug-demon.lua  storyteller-debug-equipment.lua  storyteller-debug-hair.lua  storyteller-debug-reports.lua  storyteller-debug-seed.lua  storyteller-events.lua  storyteller-snapshot.lua
docs/: event-lifecycle.md  event-type-catalog.md  feature-inventory.md  legends-data-model.md  route-map.md
experimental/: beast_compositor.py
scripts/: smoke_test.py
src/df_storyteller/: __init__.py  __main__.py  cli.py  config.py  deploy.py
src/df_storyteller/context/: __init__.py  character_tracker.py  context_builder.py  dwarven_calendar.py  event_renderer.py  event_store.py  highlights_store.py  loader.py  lore_pins.py  map_generator.py  narrative_formatter.py  notes_store.py  quest_store.py  world_lore.py
src/df_storyteller/dfhack_scripts/: storyteller-begin.lua  storyteller-events.lua
src/df_storyteller/ingestion/: __init__.py  dfhack_json_parser.py  gamelog_parser.py  legends_parser.py
src/df_storyteller/llm/: base.py  claude_provider.py  ollama_provider.py  openai_provider.py  prompt_templates.py
src/df_storyteller/output/: __init__.py  journal.py
src/df_storyteller/portraits/: __init__.py  beast_compositor.py  compositor.py  creature_sprites.py  evaluator.py  graphics_parser.py  tile_loader.py
src/df_storyteller/schema/: __init__.py  entities.py  events.py  highlights.py  notes.py  personality.py  quests.py  world.py
src/df_storyteller/stories/: __init__.py  base.py  biography.py  chronicle.py  df_mechanics.py  quest_generator.py  saga.py
src/df_storyteller/web/: __init__.py  (+4 more)
tests/: test_context_builder.py  test_dfhack_json_parser.py  test_event_renderer.py  test_gamelog_parser.py  test_highlights_store.py  test_hotlink_filter.py  test_legends_parser.py  test_llm_providers.py  test_manual_entries.py  test_route_smoke.py  test_router_logic.py  test_shared_infrastructure.py  test_web_security.py
tests/fixtures/: combat_gamelog.txt  sample_dfhack_event.json  sample_gamelog.txt  sample_legends.xml
(+45 files in other folders)
