[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "df-storyteller"
version = "0.1.0"
description = "Dwarf Fortress storytelling assistant — turns game events into narrative stories"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "jinja2>=3.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.12'",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
df-storyteller = "df_storyteller.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
